--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "dist/index.js",
+        "src": "api/websocket.js",
         "use": "@vercel/node"
       }
     ],
